fixed light/dark mode

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -235,6 +235,6 @@
 
 @media screen and (max-width: 400px) {
   :root {
-    --item-gap: 50px;
+    --item-gap: 60px;
   }
 }
